k8s/copy-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-helper
  namespace: amr-portal-dev
spec:
  securityContext:
    runAsUser: 7123
    runAsGroup: 1347
    fsGroup: 1347
  containers:
    - name: helper
      image: busybox
      imagePullPolicy: IfNotPresent
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - name: data
          mountPath: /data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: amr-portal-pv-claim-data-dev
