k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: amr-portal-ingress
  namespace: amr-portal-ns-dev
spec:
  ingressClassName: nginx
  rules:
  - host: www.ebi.ac.uk
    http:
      paths:
      - backend:
          service:
            name: amr-api-svc-dev
            port:
              number: 8000
        path: /amr/(api/.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: amr-frontend-svc-dev
            port:
              number: 8000
        path: /amr/?(.*)
        pathType: ImplementationSpecific
